Fix weird button align/margin issue

--- a/frontend/src/pages/HomePage.css
+++ b/frontend/src/pages/HomePage.css
@@ -6,7 +6,3 @@
   height: 100vh;
   text-align: center;
 }
-
-button {
-  margin-top: 20px;
-}
